navbar,footer,all htmlpages created

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="main">
             <h3 id="header">This is your <span id="header-span">Personalized Website</span></h3>
             <h4>That helps you to manage tasks & expenses</h4>
+            <button id="main-btn">Getting Started</button>
         </div>
 <div id="footer"></div>
 </body>
